--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>The game</title>
   </head>
   <body>
+    <div id="FPS"></div>
     <div class="the-all">
       <div id="player" class="player"></div>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
