--- a/samia's/index.html
+++ b/samia's/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,7 +12,6 @@
       <div class="score-container">
         <span>Score: </span><span id="score">0</span>
         <div id="lives">Lives: <span id="livesCount">3</span></div>
-        <div id="FPS"></div>
       </div>
 
       <div class="game-container">
