--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <div class="game-container">
         <div class="start-screen">
           <h1>SPACE INVADERS</h1>
+          <p>Press the START button to begin</p>
+          <p>Use the arrow keys to move left and right</p>
           <button id="startButton">START</button>
         </div>
       </div>
